# yt2logseq

./: .gitignore  README.md  pyproject.toml
yt2logseq/: chains.py  logseq.py  main.py  prompts.py  srt.py
